@@ -1,5 +1,5 @@
 #coding: utf-8
 
-__version__ = '1.0.2'
+__version__ = '1.0.3'
 
 from .db import *
