@@ -1,3 +1,8 @@
+lorm 1.0.3 2018-3-2
+
+[FIX]   improve Query.make_expr, safer than before.
+
+
 lorm 1.0.2 2018-3-1
 
 [FIX]   fix ondup
